--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Rishabh Mishra Portfolio</title>
+    <title>Mayank Sharma Portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -379,7 +379,7 @@
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2022-2026</span>
-    					<h2>BTech in Computer Science Engineering</h2>
+    					<h2>Bachelor of Computer Engineering</h2>
     					<span class="position">IK. Gujral Punjab Technical University</span>
     					<p class="mt-4">Grade: Expected CGPA: 8.2</p>
     				</div>
